fix horizontal gap in six-sidebar-item-group

--- a/libraries/ui-library/src/components/six-sidebar/six-sidebar.scss
+++ b/libraries/ui-library/src/components/six-sidebar/six-sidebar.scss
@@ -15,7 +15,6 @@
 
     &.sidebar--open {
       box-shadow: var(--six-elevation-1dp);
-      padding: 0 var(--six-spacing-small);
     }
 
     &:not(.sidebar--visible) {
